--- a/style.css
+++ b/style.css
@@ -22,6 +22,38 @@ body{
 }
 /* Htet Yin Min End */
 
+/* highlight */
+.background{
+    background-image: url(images/gallery-maldives.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    width: 100%;
+    height: 450px;
+}
+
+.icon{
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    position: absolute;
+    color: rgba(255, 255, 255, 0.671);
+    top: 120%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+.icon:hover{
+    color:#FF9E00;
+}
+
+
+.travel_video{
+    width: 765px;
+    height: 632px;
+    background: black;
+}
+/* end highlight */
+
 /*Start Gallery */
 
 .gallery_title{
@@ -109,4 +141,35 @@ body{
     left: 0;
     background-color: rgba(12, 12, 12, 0.75);
 }
+
+.gallery_view{
+    padding: 1em;
+	color: #fff;
+	text-transform: uppercase;
+	font-size: 1em;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+.gallery_view::before,
+.gallery_view::after{
+    pointer-events: none;
+}
+
+.gallery_view, .gallery_view >a{
+    position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.gallery_view>a{
+    z-index: 1000;
+	text-indent: 200%;
+	white-space: nowrap;
+	font-size: 0;
+	opacity: 0;
+}
+
 /* End Gallery */
