--- a/style.css
+++ b/style.css
@@ -92,11 +92,11 @@ body{
 .tourCard{
     perspective: 1500px;  /* for 3D effect */
     position: relative;
-    height: 460px;
+    height: 475px;
 }
 
 .tourCard-side{
-    height: 470px;
+    height: 475px;
     transition: all .8s ease;
     position: absolute;
     width: 100%;
@@ -125,8 +125,8 @@ body{
     list-style: none;
 }
 
-.tourCard-list li:not(:last-child) {
-    border-bottom: 1px solid #dee;
+.tourCard-list li{
+    border-top: 1px solid #dee;
 }
 
 .tourCard-align{
@@ -154,6 +154,16 @@ body{
 
 .tourMfix{
     margin: 40px 0 50px 0;
+}
+
+@media only screen and (min-width: 1400px) {
+    .tourCard{
+        height: 505px;
+    }
+    
+    .tourCard-side{
+        height: 505px;
+    }
 }
 
 @media only screen and (max-width: 768px) {
