--- a/style.css
+++ b/style.css
@@ -12,28 +12,18 @@ body{
     font-family: roboto;
 }
 
+/* kyaw san win */
+.home{
+    height: 100vh;
+    background-color: green;
+}
+
 /*** Button အတွက် discoverBtn ဆိုတဲ့ Class လေးကို ယူသုံးလို့ရပါတယ်၊ အတူတူပဲဆိုတော့ 😁 ***/
 
 
 
 
 /* Htet Yin Min Area */
-.scrollup {
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    color: #fff;
-    text-align: center;
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    line-height: 42px;
-    cursor: pointer;
-    /* display: none; */
-    z-index: 2;
-    background-color: #FF9E00;
-    transition-delay: .5s;
-}
 
 .tourSection h3{
     font-family: roboto-bold;
@@ -521,3 +511,34 @@ body{
 }
 
 /* End Gallery */
+
+/* scrollup */
+.to-top{
+    
+    position: fixed;
+    bottom: 16px;
+    right: 32px;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 50px;
+    text-decoration: none;
+    color: #FF9E00;
+    opacity: 0;
+    pointer-events: none;
+    transition: all .4s;
+}
+
+.to-top:hover{
+    color:#ffd900;
+}
+
+.to-top.active{
+    bottom: 32px;
+    pointer-events: auto;
+    opacity: 1;
+    
+}
+/* endscrollup */
