--- a/style.css
+++ b/style.css
@@ -522,6 +522,64 @@ body{
 
 /* End Gallery */
 
+/* Start About */
+.about-title h2{
+    font-family: roboto-bold;
+}
+
+.about{
+    cursor: pointer;
+    background-color: white;
+    color: black;
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+.about h3 {
+    opacity: .8;
+}
+.about span {
+    display: block;
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    margin:auto;
+    border-radius:50%;  
+    font-size: 40px;
+    color: white;
+    opacity: 0.7;
+    background-color: #FF9E00;
+    border: 2px solid #FF9E00;
+
+    webkit-transition:all .5s ease;
+    moz-transition:all .5s ease;
+    os-transition:all .5s ease;
+    transition:all .5s ease;
+
+}
+.about-item:hover span{
+    opacity: 1; 
+    border: 2px solid #CC0039;
+    font-size: 42px;
+    -webkit-transform: scale(1.1,1.1) rotate(360deg) ;
+    -moz-transform: scale(1.1,1.1) rotate(360deg) ;
+    -o-transform: scale(1.1,1.1) rotate(360deg) ;
+    transform: scale(1.1,1.1) rotate(360deg) ;
+}
+.about-item:hover h3{
+    opacity: 1;
+    -webkit-transform: scale(1.1,1.1)  ;
+    -moz-transform: scale(1.1,1.1)  ;
+    -o-transform: scale(1.1,1.1)  ;
+    transform: scale(1.1,1.1) ;
+}
+.about .lead{
+    color: #CC0039;
+    font-size: 14px;
+    font-weight: bold;
+}
+/* End About */
+
+
 /* scrollup */
 .to-top{
     
