--- a/style.css
+++ b/style.css
@@ -644,3 +644,44 @@ body{
 
 }
 /* end hightlight */
+
+/* Conatct start */
+.contact{
+    padding: 4%;
+    font-family: roboto;
+    height: 400px;
+}
+.col-md-3{
+    background: #ff9E00;
+    padding: 4%;
+    border-top-left-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+}
+.contact-info{
+    margin-top:10%;
+}
+.contact-info img{
+    margin-bottom: 15%;
+}
+.contact-info h2{
+    margin-bottom: 10%;
+}
+.col-md-9{
+    background: #fff;
+    padding: 3%;
+    border-top-right-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+}
+.contact-form label{
+    font-weight:600;
+}
+.contact-form button{
+    background: #FF9E00;
+    color: #fff;
+    font-weight: 600;
+    width: 25%;
+}
+.contact-form button:focus{
+    box-shadow:none;
+}
+/* Conatct end */
