fix Contact Page

--- a/style.css
+++ b/style.css
@@ -667,7 +667,7 @@ body{
     margin-bottom: 10%;
 }
 .col-md-9{
-    background: #fff;
+    background: #ffb900;
     padding: 3%;
     border-top-right-radius: 0.5rem;
     border-bottom-right-radius: 0.5rem;
