--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@
     src: url(font/Roboto-Bold.ttf);
 }
 
+@font-face{
+    font-family: logo-font;
+    src: url(font/DancingScript-Bold.ttf);
+}
+
 body{
     font-family: roboto;
 }
@@ -649,8 +654,15 @@ body{
 .contact{
     padding: 4%;
     font-family: roboto;
-    height: 400px;
+    height: 600px;
 }
+
+@media only screen and (max-width: 768px) {
+    .contact{
+        height: 860px;
+    }    
+}
+
 .col-md-3{
     background: #ff9E00;
     padding: 4%;
@@ -691,6 +703,31 @@ body{
 .myFooter{
     background-color: #000;
     color: #fff;
+}
+
+.myFooter h3{
+    color: #FF9E00;
+    font-family: roboto-bold;
+}
+
+.footerLogo{
+    font-family: logo-font;
+    font-size: 40px;
+}
+
+.footerNav{
+    border-top: 1px solid #777;
+    padding-top: 20px;
+    /* display: inline-block; */
+}
+
+.footerCopyright{
+    color:  #777;
+    border-top: 1px solid #777;
+    padding-top: 20px;
+    /* font-family: roboto-bold; */
+    font-size: 18px;
+    /* display: inline-block; */
 }
 
 /* Footer End  */
