--- a/style.css
+++ b/style.css
@@ -76,6 +76,17 @@ body{
     background: transparent;
 }
 
+div.transbox {
+
+    margin: 30px;
+    padding: 15px;
+    background-color: #050505cb;
+    border: 1px solid rgb(63, 37, 37);
+    border-radius: 5px;
+    opacity: 0.6;
+
+  }
+
 
 /* End Home */
 
