--- a/style.css
+++ b/style.css
@@ -722,6 +722,7 @@ body{
 
 .col-md-3{
     background: #ff9E00;
+    color: #fff;
     padding: 4%;
     border-top-left-radius: 0.5rem;
     border-bottom-left-radius: 0.5rem;
