--- a/style.css
+++ b/style.css
@@ -610,6 +610,10 @@ body{
 .about h3 {
     opacity: .8;
 }
+.about p {
+    text-align: center;
+    color: grey;
+}
 .about span {
     display: block;
     width: 100px;
@@ -644,11 +648,6 @@ body{
     -moz-transform: scale(1.1,1.1)  ;
     -o-transform: scale(1.1,1.1)  ;
     transform: scale(1.1,1.1) ;
-}
-.about .lead{
-    color: #CC0039;
-    font-size: 14px;
-    font-weight: bold;
 }
 /* End About */
 
